review of _section.scss, pt.1

--- a/src/pug/base.pug
+++ b/src/pug/base.pug
@@ -153,13 +153,13 @@ html(lang="ru")
                         .col-8
                             .contacts.mb-2
                                 .contacts__item.d-flex.align-items-center.h5.text-nowrap.mb-1
-                                  +icon('placemark','contacts__icon color-white mr-2')
+                                  +icon('placemark','contacts__icon color-theme-white mr-2')
                                   span.color-theme-white г. Ростов-на-Дону
                                 a.contacts__item.d-flex.align-items-center.h5.text-nowrap.mb-1(href="#")
-                                  +icon('phone-nobg','contacts__icon color-white mr-2')
+                                  +icon('phone-nobg','contacts__icon color-theme-white mr-2')
                                   span.color-theme-white +7 (365) 277-70-68
                                 a.contacts__item.d-flex.align-items-center.h5.text-nowrap.mb-1(href="#")
-                                  +icon('email','contacts__icon color-white mr-2')
+                                  +icon('email','contacts__icon color-theme-white mr-2')
                                   span.color-theme-white office@don-shina.ru
                         .col-4
                             nav.social.d-flex.flex-wrap.align-items-center
