--- a/src/pug/category/popular.pug
+++ b/src/pug/category/popular.pug
@@ -1,6 +1,6 @@
 - var togglersRadio = [{index: 1, title: 'Все', checked: true},{index: 2, title: 'Шины'},{index: 3, title: 'Диски'},{index: 4, title: 'Мотошины'},{index: 5, title: 'Аккумуляторы'},{index: 6, title: 'Автозапчасти'},{index: 7, title: 'Масла'},{index: 8, title: 'Автотовары'},{index: 9, title: 'Скидки'},{index: 10, title: 'Хиты'},{index: 11, title: 'Шины на внедорожник'},{index: 12, title: 'Шины на газель'},{index: 13, title: 'Акции'}]
-.section.mb-3
-  .section__title Часто выбирают:
+.mb-3
+  .h2.font-weight-bold.mb-4 Часто выбирают:
   form.form.mb-3(action="#")
     .slides.slides_togglers.swiper-container
       +slidesNav('slides__btn_sm slides_togglers-prev','slides__btn_sm slides_togglers-next')
