--- a/src/scss/tpl/_section.scss
+++ b/src/scss/tpl/_section.scss
@@ -11,6 +11,12 @@
   }
 }
 
+.section {
+  @include py(2.5rem);
+  border-radius: .5rem;
+  box-shadow: 1px 1px 8px 0 rgba(0, 0, 0, .16);
+}
+
 .section__wrapper {
   @include py(2.5rem);
   border-radius: .5rem;
