review of _section.scss, pt.2

--- a/src/pug/base.pug
+++ b/src/pug/base.pug
@@ -24,10 +24,10 @@ html(lang="ru")
                     .col-xl-6.col-lg-12.col-8.d-flex.align-items-center.justify-content-xl-start.justify-content-lg-between.mb-xl-0.mb-lg-2
                         .contacts.d-flex.align-items-center.justify-content-lg-between.col-xl-7.col-lg-5.w-auto.px-0
                             .contacts__item.d-flex.align-items-center.h5.text-nowrap.mr-4
-                              +icon('placemark','contacts__icon color-brand mr-lg-2')
+                              +icon('placemark','contacts__icon color-theme-brand mr-lg-2')
                               span.d-none.d-lg-block г. Ростов-на-Дону
                             a.contacts__item.d-flex.align-items-center.h5.text-nowrap.mr-4(href="#")
-                              +icon('phone','contacts__icon color-brand mr-lg-2')
+                              +icon('phone','contacts__icon color-theme-brand mr-lg-2')
                               span.d-none.d-lg-block +7 (365) 277-70-68
                         nav.social.d-flex.flex-wrap.align-items-center
                             a.social__item.color-theme-brand.mr-4.mr-lg-3(href="#")
