--- a/src/pug/base/links.pug
+++ b/src/pug/base/links.pug
@@ -1,7 +1,7 @@
-.section
-  .section__wrapper.section__wrapper_px
+.section.section_divider.px-lg-0.px-3.mb-5
+  .px-lg-5.px-md-4
     .mb-3
-      .section__title.section__title_sm Сезон
+      .h3.font-weight-bold.mb-3 Сезон
       a.toggler(href="#") Летняя
       a.toggler(href="#") Зимняя
       a.toggler(href="#") Всесезонная
@@ -9,11 +9,11 @@
       a.toggler(href="#") Зимняя
       a.toggler(href="#") Всесезонная
     .mb-3
-      .section__title.section__title_sm Тип
+      .h3.font-weight-bold.mb-3 Тип
       a.toggler(href="#") Легковые
       a.toggler(href="#") Для микроавтобуса
       a.toggler(href="#") Для микроавтобуса
-    .section__title.section__title_sm Диаметр
+    .h3.font-weight-bold.mb-3 Диаметр
     a.toggler(href="#") 13
     a.toggler(href="#") 14
     a.toggler(href="#") 14С
