--- a/src/pug/contacts.pug
+++ b/src/pug/contacts.pug
@@ -18,22 +18,22 @@ block wrapper
           .accordion__body.overflow-hidden.px-4
             .contacts
               .contacts__item.d-flex.align-items-center.h5.text-wrap.mb-3
-                +icon('placemark','contacts__icon color-brand mr-2')
+                +icon('placemark','contacts__icon color-theme-brand mr-2')
                 | г. Ростов-на-Дону; ул. Доватора, 11
               a.contacts__item.d-flex.align-items-center.h3.font-weight-bold.text-nowrap.mb-3(href="#")
-                +icon('phone-nobg','contacts__icon color-brand mr-2')
+                +icon('phone-nobg','contacts__icon color-theme-brand mr-2')
                 | +7 (365) 277-70-68
               a.contacts__item.d-flex.align-items-center.h5.text-nowrap.mb-3(href="#")
-                +icon('email','contacts__icon color-brand mr-2')
+                +icon('email','contacts__icon color-theme-brand mr-2')
                 | office@don-shina.ru
               a.contacts__item.d-flex.align-items-center.h5.text-nowrap.mb-3(href="#")
-                +icon('wapp-bordered','contacts__icon color-brand mr-2')
+                +icon('wapp-bordered','contacts__icon color-theme-brand mr-2')
                 | WhatsApp
               a.contacts__item.d-flex.align-items-center.h5.text-nowrap.mb-3(href="#")
-                +icon('tg-bordered','contacts__icon color-brand mr-2')
+                +icon('tg-bordered','contacts__icon color-theme-brand mr-2')
                 | Telegram
               a.contacts__item.d-flex.align-items-start.h5(href="#")
-                +icon('time','contacts__icon color-brand mr-2')
+                +icon('time','contacts__icon color-theme-brand mr-2')
                 span Режим работы:
                   br
                   | Пн.–Пт. 09:00–19:00,
@@ -47,22 +47,22 @@ block wrapper
           .accordion__body.overflow-hidden.px-4
             .contacts
               .contacts__item.d-flex.align-items-center.h5.text-wrap.mb-3
-                +icon('placemark','contacts__icon color-brand mr-2')
+                +icon('placemark','contacts__icon color-theme-brand mr-2')
                 | г. Ростов-на-Дону; ул. Доватора, 11
               a.contacts__item.d-flex.align-items-center.h3.font-weight-bold.text-nowrap.mb-3(href="#")
-                +icon('phone-nobg','contacts__icon color-brand mr-2')
+                +icon('phone-nobg','contacts__icon color-theme-brand mr-2')
                 | +7 (365) 277-70-68
               a.contacts__item.d-flex.align-items-center.h5.text-nowrap.mb-3(href="#")
-                +icon('email','contacts__icon color-brand mr-2')
+                +icon('email','contacts__icon color-theme-brand mr-2')
                 | office@don-shina.ru
               a.contacts__item.d-flex.align-items-center.h5.text-nowrap.mb-3(href="#")
-                +icon('wapp-bordered','contacts__icon color-brand mr-2')
+                +icon('wapp-bordered','contacts__icon color-theme-brand mr-2')
                 | WhatsApp
               a.contacts__item.d-flex.align-items-center.h5.text-nowrap.mb-3(href="#")
-                +icon('tg-bordered','contacts__icon color-brand mr-2')
+                +icon('tg-bordered','contacts__icon color-theme-brand mr-2')
                 | Telegram
               a.contacts__item.d-flex.align-items-start.h5(href="#")
-                +icon('time','contacts__icon color-brand mr-2')
+                +icon('time','contacts__icon color-theme-brand mr-2')
                 span Режим работы:
                   br
                   | Пн.–Пт. 09:00–19:00,
@@ -76,22 +76,22 @@ block wrapper
           .accordion__body.overflow-hidden.px-4
             .contacts
               .contacts__item.d-flex.align-items-center.h5.text-wrap.mb-3
-                +icon('placemark','contacts__icon color-brand mr-2')
+                +icon('placemark','contacts__icon color-theme-brand mr-2')
                 | г. Ростов-на-Дону; ул. Доватора, 11
               a.contacts__item.d-flex.align-items-center.h3.font-weight-bold.text-nowrap.mb-3(href="#")
-                +icon('phone-nobg','contacts__icon color-brand mr-2')
+                +icon('phone-nobg','contacts__icon color-theme-brand mr-2')
                 | +7 (365) 277-70-68
               a.contacts__item.d-flex.align-items-center.h5.text-nowrap.mb-3(href="#")
-                +icon('email','contacts__icon color-brand mr-2')
+                +icon('email','contacts__icon color-theme-brand mr-2')
                 | office@don-shina.ru
               a.contacts__item.d-flex.align-items-center.h5.text-nowrap.mb-3(href="#")
-                +icon('wapp-bordered','contacts__icon color-brand mr-2')
+                +icon('wapp-bordered','contacts__icon color-theme-brand mr-2')
                 | WhatsApp
               a.contacts__item.d-flex.align-items-center.h5.text-nowrap.mb-3(href="#")
-                +icon('tg-bordered','contacts__icon color-brand mr-2')
+                +icon('tg-bordered','contacts__icon color-theme-brand mr-2')
                 | Telegram
               a.contacts__item.d-flex.align-items-start.h5(href="#")
-                +icon('time','contacts__icon color-brand mr-2')
+                +icon('time','contacts__icon color-theme-brand mr-2')
                 span Режим работы:
                   br
                   | Пн.–Пт. 09:00–19:00,
