--- a/src/pug/personal-vin.pug
+++ b/src/pug/personal-vin.pug
@@ -8,7 +8,7 @@ block personal
     .section__title.text-center #{title}
     .section__wrapper.pb-0
       .section__body.pb-0
-        .section__title.section__title_sm.color-theme-brand По вашему запросу был осуществен подбор запчастей (WAUBH54B11N111054):
+        .h3.font-weight-bold.mb-3.color-theme-brand По вашему запросу был осуществен подбор запчастей (WAUBH54B11N111054):
         a.section__row(href="#") Передняя ступица для использования с 14"/15" тормозной системой,POC J67/JQ3/JQ4
         a.section__row(href="#") Передняя ступица для использования с 14"/15" тормозной системой,POC J67/JQ3/JQ4
         a.section__row(href="#") Передняя ступица для использования с 14"/15" тормозной системой,POC J67/JQ3/JQ4
