--- a/src/pug/service.pug
+++ b/src/pug/service.pug
@@ -67,7 +67,7 @@ block wrapper
               | или записаться вы можете по телефону:
             .contacts
               a.contacts__item.d-flex.align-items-center.h3.font-weight-bold.text-nowrap.color-theme-brand(href="tel:+73652777068")
-                +icon('phone','contacts__icon color-brand mr-2')
+                +icon('phone','contacts__icon color-theme-brand mr-2')
                 span.contacts__item-title +7 (365) 277-70-68
     .section.mb-3
       .section__title Отзывы
