--- a/src/pug/subcategory-tires-tile.pug
+++ b/src/pug/subcategory-tires-tile.pug
@@ -70,7 +70,7 @@ block wrapper
       .section
         .section__wrapper.section__wrapper_px
           .mb-3
-            .section__title.section__title_sm Сезон
+            .h3.font-weight-bold.mb-3 Сезон
             a.toggler(href="#") Летняя
             a.toggler(href="#") Зимняя
             a.toggler(href="#") Всесезонная
@@ -78,11 +78,11 @@ block wrapper
             a.toggler(href="#") Зимняя
             a.toggler(href="#") Всесезонная
           .mb-3
-            .section__title.section__title_sm Тип
+            .h3.font-weight-bold.mb-3 Тип
             a.toggler(href="#") Легковые
             a.toggler(href="#") Для микроавтобуса
             a.toggler(href="#") Для микроавтобуса
-          .section__title.section__title_sm Диаметр
+          .h3.font-weight-bold.mb-3 Диаметр
           a.toggler(href="#") 13
           a.toggler(href="#") 14
           a.toggler(href="#") 14С
